@@ -36,6 +36,7 @@ misc improvements
  	-forgettable HMs (Lunos, thespbgamer, Jaizu)
 	-more bonus premier balls, like in LGPE (BuffelSalt)
 	-slight adjustment to Brendan's script for when you first meet him
+	-tweaked saving text to make sense on both real hardware and emulators
 	-name rater can change the names of non-OT pokemon
 	-larger visibility radius in darkness
 	-stereo sound and set style are now enabled by default
